feat: upsert secrets for org routes (#61)
